--- a/index.html
+++ b/index.html
@@ -1,12 +1,91 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="static/style.css">
+    <title>Food Construct</title>
 </head>
 <body>
-    <h1>maga</h1>
+    <header>
+        <h1>Food Construct</h1>
+        <nav> 
+            <a href="#about">О нас </a>
+            <a href="#">Собрать ланч </a>
+            <a href="#">Заказы </a>
+            <a href="#contacts">Контакты </a>
+        </nav>
+    </header>
+
+    <main>
+        <section id="about">
+            <img src="media/img.png" alt="Img">
+            <h2>О нас</h2>
+            <p>Food Food Construct - доставка бизнес-ланчей в Москве. Мы привезем вам горячую вкусную еду в любую точку города к назначенному времени.</p>
+        </section>
+
+        <section>
+            <h2>Преимущества Food Construct</h2>
+            <ul>
+                <li>Привозим обед к назначенному времени без опозданий</li>
+                <li>Надежно упаковываем блда в удобные контейнеры бесплатно</li>
+                <li>Доставляем ланчи весь день с 7:00 до 23:00</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Топ-5 популярных блюд</h2>
+            <table>
+                <tr>
+                    <th></th>
+                    <th>Название</th>
+                    <th>Кол-во заказов в неделю</th>
+                    <th>Цена</th>
+                </tr>
+                
+                <tr>
+                    <th>1</th>
+                    <th>Лазанья</th>
+                    <th>185</th>
+                    <th>385</th>
+                </tr>
+
+                <tr>
+                    <th>2</th>
+                    <th>Том Ям с креветками</th>
+                    <th>161</th>
+                    <th>365</th>
+                </tr>
+
+                <tr>
+                    <th>2</th>
+                    <th>Норвежский суп</th>
+                    <th>144</th>
+                    <th>270</th>
+                </tr>
+
+                <tr>
+                    <th>4</th>
+                    <th>Жареная картошка с грибами</th>
+                    <th>132</th>
+                    <th>150</th>
+                </tr>
+
+                <tr>
+                    <th>5</th>
+                    <th>Котлеты из курицы с картофельным пюре</th>
+                    <th>132</th>
+                    <th>225</th>
+                </tr>
+            </table>
+        </section>
+    </main>
+
+    <footer id="contacts">
+        <p>Позвонить нам +7-000-000-00-</p>
+    </footer>
+
+
 </body>
 </html>
