--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Food Construct</h1>
         <nav> 
             <a id="acitve" href="#about">О нас </a>
-            <a href="#">Собрать ланч </a>
+            <a href="https://slaverchief.github.io/lab2_web/">Собрать ланч </a>
             <a href="#">Заказы </a>
             <a href="#contacts">Контакты </a>
         </nav>
