--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Food Construct</h1>
         <nav> 
-            <a id="acitve" href="#about">О нас </a>
+            <a id="active" href="#about">О нас </a>
             <a href="https://slaverchief.github.io/lab2_web/">Собрать ланч </a>
             <a href="#">Заказы </a>
             <a href="#contacts">Контакты </a>
